src/objects/Special_Feature_Option__c.object
<CustomObject>
    <fields>
        <fullName>Base_Unit_to_be_Modified__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select formats by search/lookup as defined in the Format creation screen</inlineHelpText>
        <label>Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Records</relationshipLabel>
        <relationshipName>SFOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <formula>IF( RecordType.DeveloperName =&apos;Option&apos;,Option_Parent__r.Special_Feature_Parent__r.Name__c , 
IF( RecordType.DeveloperName  = &apos;Read_Only&apos;, Option_Parent__r.Special_Feature_Parent__r.Name__c , &apos;&apos;))</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Number__c</fullName>
        <formula>IF(ISBLANK(Parent_SFO__r.Parent_SFO__c),&apos;&apos;, Parent_SFO__r.Parent_SFO__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drafting_cost__c</fullName>
        <label>Drafting Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drafting_hours__c</fullName>
        <label>Drafting hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dynamic_RollUp__c</fullName>
        <label>Dynamic RollUp</label>
        <summarizedField>SFO_Dynamic_Fields__c.Field_Value_Number__c</summarizedField>
        <summaryFilterItems>
            <field>SFO_Dynamic_Fields__c.Is_Available_for_RollUp__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SFO_Dynamic_Fields__c.SFO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <label>Engineering Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Format_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Base_Unit_to_be_Modified__r.Name)), Base_Unit_to_be_Modified__r.Description__c, 
&apos;&apos;)</formula>
        <label>Product Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Individual Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <label>Manufacturing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modifier_Cost__c</fullName>
        <label>Modifier Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modifier_Location__c</fullName>
        <label>Modifier Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option_No__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Option No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Option_Number__c</fullName>
        <formula>&quot;Option&quot;&amp; &quot;-&quot; &amp; Option_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Special_Feature_Option__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Level 4-Special Feature</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>SFOs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>IF(RecordType.DeveloperName == &apos;Component&apos;, Parent_SFO__r.Name__c,
   IF(RecordType.DeveloperName == &apos;Special_Feature_Option&apos;, Special_Feature_Parent__r.Name__c,
      IF(OR(RecordType.DeveloperName == &apos;Option&apos;, RecordType.DeveloperName == &apos;Read_Only&apos;), Option_Parent__r.Name__c,&apos;&apos;)))</formula>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field allows users to click on the icon to select a value from a popup list.</inlineHelpText>
        <label>Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Special_Feature_Option__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Special_Feature_Option__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Level 2-Section</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>SFOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased_material_cost__c</fullName>
        <label>Purchased Material Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raw_material_cost__c</fullName>
        <label>Raw Material Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revision_Version__c</fullName>
        <label>Revision Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_date__c</fullName>
        <label>Revision date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <formula>IF( RecordType.DeveloperName  = &apos;Option&apos;, Option_Parent__r.Special_Feature_Parent__r.Parent_SFO__r.Name__c  , 
IF(RecordType.DeveloperName  = &apos;Special_Feature_Option&apos;,  Special_Feature_Parent__r.Parent_SFO__r.Name__c ,  
IF( RecordType.DeveloperName  = &apos;Read_Only&apos;,  Option_Parent__r.Special_Feature_Parent__r.Parent_SFO__r.Name__c , &apos;&apos;) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <formula>IF(ISBLANK(Parent_SFO__r.Parent_SFO__c),&apos;&apos;, 
IF(ISBLANK( Parent_SFO__r.Parent_SFO__r.Parent_SFO__c ),&apos;&apos;, Parent_SFO__r.Parent_SFO__r.Parent_SFO__r.Name ) 
)</formula>
        <label>Section Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Feature_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Special_Feature_Option__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Level 3-Component</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipLabel>Special Features</relationshipLabel>
        <relationshipName>SFOs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                    <isActive>false</isActive>
                    <label>Obsolete</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                    <isActive>false</isActive>
                    <label>Submitted for Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Eng_Draft_Cost__c</fullName>
        <label>Sum of Eng/Draft Cost</label>
        <summarizedField>SFO_Dynamic_Fields__c.Field_Value_Number__c</summarizedField>
        <summaryFilterItems>
            <field>SFO_Dynamic_Fields__c.Is_Eng_Draftng_Cost__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>SFO_Dynamic_Fields__c.SFO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Mod_Material_Mfg_Cost__c</fullName>
        <label>Sum of Mod/Material/Mfg Cost</label>
        <summarizedField>SFO_Dynamic_Fields__c.Field_Value_Number__c</summarizedField>
        <summaryFilterItems>
            <field>SFO_Dynamic_Fields__c.Is_Modifer_Material_Mfg_Cost__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>SFO_Dynamic_Fields__c.SFO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost1__c</fullName>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Fixed_Unit_Cost__c  +  Variable_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_value__c</fullName>
        <label>Option Total Cost</label>
        <summarizedField>SFO_Dynamic_Fields__c.Field_Value_Number__c</summarizedField>
        <summaryFilterItems>
            <field>SFO_Dynamic_Fields__c.Is_Rollup_Field__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>SFO_Dynamic_Fields__c.SFO__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Tags__c</fullName>
        <inlineHelpText>Value is populated when Option is linked to FPA</inlineHelpText>
        <label>Unit Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variable_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Variable Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Records</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>Component</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Special_Feature_Option__c.Component</value>
        </filters>
        <label>Component</label>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft</label>
    </listViews>
    <listViews>
        <fullName>Locked</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Special_Feature_Option__c.Read_Only</value>
        </filters>
        <label>Locked</label>
    </listViews>
    <listViews>
        <fullName>Option</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Special_Feature_Option__c.Option</value>
        </filters>
        <label>Option</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <listViews>
        <fullName>Section</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Special_Feature_Option__c.Section</value>
        </filters>
        <label>Section</label>
    </listViews>
    <listViews>
        <fullName>Special_Feature</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Parent_SFO__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Special_Feature_Option__c.Special_Feature_Option</value>
        </filters>
        <label>Special Feature</label>
    </listViews>
    <listViews>
        <fullName>Submitted_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Parent_Name__c</columns>
        <columns>Format_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>Submitted for Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Records</pluralLabel>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <description>Holds Component Records</description>
        <label>Level 3-Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Format</fullName>
        <active>false</active>
        <description>Holds Format Records</description>
        <label>Level 1-Format</label>
    </recordTypes>
    <recordTypes>
        <fullName>Option</fullName>
        <active>true</active>
        <description>Holds Options Records</description>
        <label>Level 5-Option</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>Holds Locked Records</description>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section</fullName>
        <active>true</active>
        <description>Holds Section Records</description>
        <label>Level 2-Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Feature_Option</fullName>
        <active>true</active>
        <description>Holds Special Feature Records</description>
        <label>Level 4-Special Feature</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>